# fqdn-appid-detection-1

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  f.md  main.py  pyproject.toml  pytest.ini
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
config/: config.yaml  feature_config.yaml  model_config.yaml
scripts/: evaluate.py  predict.py  train.py  upgrade_syntax.py
src/: __init__.py
src/api/: __init__.py  app.py  main.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  data_loader.py  data_validator.py  preprocessor.py
src/evaluation/: __init__.py  evaluator.py
src/features/: __init__.py  feature_engineer.py  feature_pipeline.py  feature_selector.py  record_data_extractor.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  base.py  base_model.py  catboost_model.py  ensemble.py  lgb_model.py  xgb_model.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  helpers.py  logger.py  storage.py
tests/: __init__.py  conftest.py  test_rich_logger.py
tests/integration/: test_pipeline.py
tests/unit/: test_data.py  test_feature_engineer.py  test_features.py  test_lightgbm_imbalance.py  test_models.py  test_preprocessor.py  test_record_data_extractor.py
