[project]
name = "fqdn-orphan-detection"
version = "1.0.0"
description = "Enterprise ML system for FQDN orphan detection and classification"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "ML Engineering Team", email = "ml-team@company.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "catboost>=1.2.2",
    "cloudpickle>=3.0.0",
    "connectorx>=0.3.2",
    "fastapi>=0.109.0",
    "great-expectations>=0.18.0",
    "httpx>=0.26.0",
    "hydra-core>=1.3.2",
    "joblib>=1.3.0",
    "lightgbm>=4.2.0",
    "lime>=0.2.0.1",
    "loguru>=0.7.2",
    "optuna>=3.5.0",
    "optuna-dashboard>=0.14.0",
    "polars>=0.20.0",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=14.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-levenshtein>=0.23.0",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.5.0",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "shap>=0.44.0",
    "sqlalchemy>=2.0.0",
    "tldextract>=5.1.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.25.0",
    "wandb>=0.16.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
deep = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
]
monitoring = [
    "evidently>=0.4.0",
    "prometheus-client>=0.19.0",
]

[project.scripts]
fqdn-train = "scripts.train:main"
fqdn-predict = "scripts.predict:main"
fqdn-evaluate = "scripts.evaluate:main"

[dependency-groups]
dev = [
    "black>=23.12.0",
    "hypothesis>=6.92.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
]
